tooling/nargo_cli/tests/snapshots/execute__tests__regression_mem_op_predicate_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "15989084951394364641",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 5,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      },
      {
        "name": "idx",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "16761564377371454734": {
        "error_kind": "string",
        "string": "Array index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VYPY/TQBBdJ3YSJ5wSQY1EB3T2OV8nUSDEfSBaKiQKXz4kCkRDhwT+6WTvZsjzy8QgnfekrGSNvfs883Z2PLPryN23ZHdFch+L7IiMZBybYt+KzB7W8hZ1ZaE4RifAsXMCHLsnwDEOwDEEzyQQT9cj0j6w/MJ5x3AysCb4W2QqEpNJiwGQp2S3Tf3LbFqmxvxa5F+koDOA/rnqj8Poz/qi531V1+/Ibpdw1juKuQTM5RHMFWCujmCuAXN9BHMDmBvCqO8CxdY08NrMzlx9PRzMRW0nYWzPI7LnXD0uHNkfuqDfQR65w41M1x36R/PUmWKqPZ+IxuLqcB46lsCYru9gdz0HnBVbOKZcfPtQ7XW8An2v5T5wrJYpcWo7jzwz+KMt3/rV3h/qqy70qc91DQaIp7EUxuKqbmcozzHYQV3KIyH8S3kei+zBO/r+xLDfI/s13kYf+yU18KmB9zX9hdyP5PIx9EX6mvLF/3zPaGviDr9nxY3dYd57pLyUqS3d3+gas008BCEe753bH5y0rxDp/bqi+cWu7jvuY99FBp+uwYe/SdbNnC0dXIMC16ZC59cHPzbxSgj/RqTHfqR5xQ2+CZzH/ubJXhj9sya/WevNfnsn0sfnVu6bap3uf+MqyHzmnsdX4ME1OiFOVhwjHtcV5414K74mhMcYsXKZ2sT4Gzs7tnwLvM+fNe1vLD5WDk6Ia5hvZL6NiAvmYOvbTQj/iXiGqhVPQS/7yFprrmGB1jrjeoL+6xr+6xi+xbqTUN9nkVYN45jAPueaa5iOjVzYvLJY3vvIN81pmie5xTCO+Ft5HgJ/lQ/5ObRdlPm2KLflrFyvp6uSY8yRn9q2Xy6K5ep8ulrczoqymD+6/c3yYp1dbDdlnufn62zzL/vWXhrrlG+6H8f9OuIxjyD+m2J313e55/Mb2vO4Xw246Ii802H0xVW9z9rH4/lG8Wp7WB1y1LERjGEN9e2JPKO/UJfySAj/U551TfBMou9PDPsDsl/jbfTx+WZk4EcG3q/PD9UnEufe9v+EO5ukH/uYm8aOj+s/qcF0V3kZAAA=",
  "debug_symbols": "ldXbasQgEAbgd/HaC43R0bxKKUsOZhFCEnIolJB3r5Zud5HA8t8EJ8mHA78yB+t8s99vYeynlVUfBxumtt7CNMbqODlrljAM4X57fc1Eemj1+/8612Mq161eNlbJUnHmxy6utIq+D4NnlRbnJ2e6hIWGhXknKBeECiMuBdFDkMuFvBTG/osyFwUsFCxKWGhYGFgQLCwsHCpIwALOnODMCc6c4ATpOkH3EIUockGwsLBw70R+B62AhYRFAQsFixIWGhYGFgQLCws4cwdn7sDMz1h91Uuom8H/jcx+H9uXCbp9zz4bpvMytb7bF5/G6nOipmal0FwWJnaSDkbhuHJxLdMnp7izqUgtOselkHH72MIP",
  "file_map": {
    "50": {
      "source": "fn main(mut x: [u32; 5], idx: Field) {\n    // We should not hit out of bounds here as we have a predicate\n    // that should not be hit\n    if idx as u32 < 3 {\n        x[idx] = 10;\n    }\n    assert(x[4] == 111);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/regression_mem_op_predicate/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
